--- a/src/comps/css/RenderMap.css
+++ b/src/comps/css/RenderMap.css
@@ -9,13 +9,15 @@
     border: 2px #8D8D8D solid;
     height: 158px;
     top: 2px;
+    left: 2px;
     overflow: hidden;
     box-sizing: border-box;
 }
 
 .map-thumbnail {
-    width: 100%;
-    
+    margin-top: -120px;
+    width: fit-content;
+    height: fit-content;
 }
 
 .random-map-button {
