--- a/src/comps/css/RenderRandomBodyArmor.css
+++ b/src/comps/css/RenderRandomBodyArmor.css
@@ -1,8 +1,10 @@
 .bodyarmor-container {
     position: relative;
     display: flex;
-    flex-direction: column;
-    left: 262px;
+    left: 261px;
+    height: 180px;
+    top: -2px;
+    z-index: 0;
 }
 
 .bodyarmor-icon-container {
@@ -12,16 +14,21 @@
     position: relative;
     backdrop-filter: blur(6px);
     box-sizing: border-box;
-    top: -22px;
-    left: 2px;
+    top: -154px;
+    left: 263px;
     box-sizing: border-box;
+    overflow: hidden;
+}
+
+.bodyarmor-button-container {
+    z-index: 1;
 }
 
 .bodyarmor-icon {
     height: 100%;
-    object-fit: cover;
     backdrop-filter: blur(6px);
-    overflow: visible;
+    overflow: hidden;
+    max-width: fit-content;
 }
 
 .bodyarmor-button {
@@ -44,16 +51,17 @@
     padding: 0.1em;
     text-align: center;
     box-sizing: border-box;
-    left: 11px;
+    left: 272px;
     top: 170px;
+    z-index: 0;
 }
 
 .chestrig-icon {
-    height: 100%;
+    height: 140px;
     object-fit: cover;
-    backdrop-filter: blur(6px);
-    overflow: visible;
+    overflow: hidden;
 }
+
 
 .chestrig-icon-container {
     width: 158px; 
@@ -62,8 +70,8 @@
     position: relative;
     backdrop-filter: blur(6px);
     box-sizing: border-box;
-    top: -179px;
-    left: 231px;
+    left: 331px;
+    top: 3px;
     display: flex;
     justify-content: center;
 }
@@ -77,14 +85,15 @@
     padding: 0.1em;
     text-align: center;
     box-sizing: border-box;
-    left: 240px;
-    top: -193px;
+    left: 340px;
+    top: -10px;
 }
 
 .chestrig-title {
     position: relative;
-    top: -26px;
-    left: 229px;
+    width: 164px;
+    left: 328px;
+    top: 1px;
     color: #f5f5f5;
     border: 2px #2b2b2b solid;
     background: rgb(38,38,38);
@@ -101,8 +110,8 @@
     position: relative;
     backdrop-filter: blur(2px);
     box-sizing: border-box;
-    top: -179px;
-    left: 231px;
+    top: 3px;
+    left: 331px;
     display: flex;
     text-align: center;
     align-items: center;
@@ -118,8 +127,8 @@
     position: relative;
     backdrop-filter: blur(2px);
     box-sizing: border-box;
-    top: -22px;
-    left: 2px;
+    top: -154px;
+    left: 263px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -134,8 +143,8 @@
     position: relative;
     backdrop-filter: blur(2px);
     box-sizing: border-box;
-    top: -179px;
-    left: 231px;
+    top: -153px;
+    left: 331px;
     display: flex;
     align-items: center;
     justify-content: center;
