--- a/src/comps/css/RenderRandomHeadphones.css
+++ b/src/comps/css/RenderRandomHeadphones.css
@@ -20,7 +20,6 @@
     color: #f5f5f5;
     height: 26px;
     cursor: pointer;
-    z-index: 1000;
     font-size: 14px;
 }
 
