--- a/src/comps/css/Titlebar.css
+++ b/src/comps/css/Titlebar.css
@@ -8,7 +8,7 @@
     background: linear-gradient(90deg, rgba(14,16,14,1) 18%, rgba(22,24,18,1) 47%, rgba(20,21,17,1) 100%);
     position: fixed;
     top: 0px;
-    z-index: 1200;
+    z-index: 1;
     filter: drop-shadow(2px 2px 5px rgb(36, 36, 36));
 }
 
